# Splitter

./: .gitignore  Cargo.toml  output.txt  wasm.mjs
benches/: my_benchmark.rs
src/: lib.rs
ts/src/: index.js  index.ts
