[package]
name = "splitter-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
jsonpath-rust = "0.7.0"
jsonpath_lib = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "*"


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
crate-type = ["cdylib","rlib"]
